# AqMD3-Acquisition-Console

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Readme.md  build.ps1  config.txt  message.proto  vcpkg.json
AqMD3/: CMakeLists.txt
AqMD3/include/: acquireddata.h  acquisitionbuffer.h  acquisitionbufferpool.h
AqMD3/src/: FalkorAcquisition.cpp
AqMD3ServerTest/: AqMD3ServerTest.sln
AqMD3ServerTest/AqMD3ServerTest/: AqMD3ServerTest.csproj  Message.cs  Program.cs  packages.config
AqMD3ServerTest/AqMD3ServerTest/Properties/: AssemblyInfo.cs
AqMD3_console/: CMakeLists.txt
AqMD3_console/include/: acquireddata.h  acquireddatasink.h  acquireframepublisher.h  acquirepublisher.h  acquisitionbuffer.h  acquisitionbufferpool.h  acquisitioncontext.h  acquisitioncontrol.h  cstcontext.h  cstzs1context.h  datapublisher.h  definitions.h  dgtcontext.h  digitizer.h  framepublisher.h  framesubject.h  framesubscriber.h  framewritersubscriber.h  framezmqsubscriber.h  message.pb.h  processsubject.h  publisher.h  sa220.h  server.h  streamingcontext.h  subscriber.h  uimfacquisitionrecord.h  uimfframesubscriber.h  uimfframewritersubscriber.h  zmqacquireddatasubscriber.h  zmqdatasubscriber.h
AqMD3_console/include/AqMD3/: AqMD3.h  IviVisaType.h
AqMD3_console/include/PicoSHA2/: picosha2.h
AqMD3_console/include/diagnostic/: datageneratorcontext.h  encodeddatawriter.h  falsedatapublisher.h  rawprintersubscriber.h  simplepublisher.h  uimfframedecompressorsubscriber.h
AqMD3_console/include/massspec/: toftiminginformation.h
AqMD3_console/include/util/: config.h  timehelpers.h  uimfhelpers.h
AqMD3_console/lib/: AqMD3.lib
AqMD3_console/src/: acquireddata.cpp  acquireframepublisher.cpp  acquirepublisher.cpp  acquisitionbuffer.cpp  acquisitionbufferpool.cpp  acquisitioncontext.cpp  aqmd3_console.cpp  cstcontext.cpp  cstzs1context.cpp  datapublisher.cpp  dgtcontext.cpp  digitizer.cpp  framepublisher.cpp  framesubject.cpp  framesubscriber.cpp  framewritersubscriber.cpp  framezmqsubscriber.cpp  message.pb.cpp  processsubject.cpp  sa220.cpp  server.cpp  streamingcontext.cpp  uimfacquisitionrecord.cpp  uimfframesubscriber.cpp  uimfframewritersubscriber.cpp  zmqacquireddatasubscriber.cpp  zmqdatasubscriber.cpp
AqMD3_console/src/massspec/: toftiminginformation.cpp
UIMFWriter/: CMakeLists.txt
UIMFWriter/include/UIMFWriter/: UIMFWriter.h  encodedresult.h  rlzencoder.h  uimfframe.h  uimfframeparameters.h
UIMFWriter/include/lzf/: lzfP.h
UIMFWriter/src/: UIMFWriter.cpp  encodedresult.cpp  lzf_c.c  lzf_c_best.c  lzf_d.c  rlzencoder.cpp  uimfframe.cpp
libaqmd3/: CMakeLists.txt
libaqmd3/include/libaqmd3/: acquireddata.h  acquisitionbuffer.h  acquisitionbufferpool.h  cstcontext.h  cstzs1context.h  digitizer.h  helpers.h  sa220.h  streamingcontext.h
libaqmd3/src/: acquireddata.cpp  acquisitionbuffer.cpp  acquisitionbufferpool.cpp  cstcontext.cpp  cstzs1context.cpp  digitizer.cpp  helpers.cpp  sa220.cpp  streamingcontext.cpp
templates/: app.h.in
